# claude-code-sdk-python

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  ROADMAP.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/claude_code_sdk/: __init__.py
src/claude_code_sdk/adapters/: __init__.py  claude_agent_sdk.py
src/claude_code_sdk/commands/: __init__.py  registry.py  types.py
src/claude_code_sdk/compaction/: __init__.py  autocompact.py  microcompact.py  snip.py
src/claude_code_sdk/hooks/: __init__.py  registry.py  types.py
src/claude_code_sdk/mcp/: __init__.py  client.py  types.py
src/claude_code_sdk/memdir/: __init__.py  loader.py  types.py
src/claude_code_sdk/permissions/: __init__.py  context.py  decision.py
src/claude_code_sdk/plugins/: __init__.py  loader.py  manifest.py
src/claude_code_sdk/providers/: __init__.py  anthropic.py  base.py  bedrock.py  glm.py  openai_compat.py  vertex.py
src/claude_code_sdk/skills/: __init__.py  discovery.py  parser.py
tests/adapters/: test_claude_agent_sdk.py
tests/commands/: test_command_registry.py  test_command_types.py
tests/compaction/: test_autocompact.py  test_microcompact.py  test_snip.py
tests/hooks/: test_hook_registry.py  test_hook_types.py
tests/mcp/: test_mcp_client.py  test_mcp_types.py
tests/memdir/: test_memdir_loader.py  test_memdir_types.py
tests/permissions/: test_permission_context.py  test_permission_decision.py
tests/plugins/: test_plugin_loader.py  test_plugin_manifest.py
tests/providers/: test_anthropic_provider.py  test_base.py  test_bedrock_provider.py  test_glm_provider.py  test_openai_compat_provider.py  test_vertex_provider.py
tests/skills/: test_skill_discovery.py  test_skill_parser.py
tests/subagents/: test_subagent_definition.py  test_subagent_dispatch.py
tests/tools/: test_tool_contract.py
(+5 files in other folders)
